# legion

./: .audit_files.txt  .codex_modified_files.txt  .cursor_fix-handshake-queue.md  .cursorignore  .env  .env.compose  .env.development.example  .env.ports  .env.ports.example  .eslintrc.json  .flake8  .gitignore  .legion_memory.json  .markdownlint.yaml  .pre-commit-config.yaml  .recent_files.txt  .ruff.toml  AGENTS.md  AGENT_LIMITS.md  AGENT_SKILLS_REORG_PLAN.md  BACKEND_IMPLEMENTATION_TRACKER.md  BACKEND_PLANNING.md  BROKEN_FUNCTIONS.md  CONTRIBUTING.md  DEPENDENCIES.md  DEPLOYMENT_GUIDE.md  Dockerfile  LEGION_PORTS.md  Makefile  QUEUE_PROTOCOL.md  README.md  REFACTOR_LOG.md  REFERENCE.md  SECURITY.md  STATE_SCHEMA.md  TODO.md  TODO_PLAN.md  agents.md  alembic.ini  alembic_state.ini  (+61 more)
.cache/: type_debt.json
.cursor/rules/: legion-structure.mdc  mcp-servers.mdc  mcp-startup.mdc  mcp-usage-examples.mdc
.github/: codex.yml  dependabot.yml  release.yml
.github/scripts/: ci_test_echo.py
.github/workflows/: base-image.yml  branch-protection.yml  ci.yaml  ci.yml  codex-ci.yml  codex_hooks.yml  daily-debt-digest.yml  interface_ci.yaml  link-check.yml  middleware-ci.yml
.recycle/: lmstudio_report.md  reference.md
agent-definitions/: architect_agent.yaml  metrics_agent.yaml  test_agents.yaml  therapist_agent.yaml  ux_designer_agent.yaml
agents/metrics/: handler.py
archive/docker/: README.md  docker-compose.yml  generate_docker_env.py
backup/mcp_migration/: cursor_mcp_20250525_071836.json  cursor_mcp_backup_20250526_162559.json  mcp_config.json_20250525_185710
codex-suggestions/: auth-refresh.md  discord-adapter.md  metrics-agent.md  therapist-validation.md
config/: discord_bot_config.yaml  llm_config.yaml
core/: __init__.py  constants.py  di_container.py  init_memory.py  interfaces.py  llm_client.py  llm_mode_client.py  mcp_config.py  mcp_server.py  mcp_unified.py  network.py  state.py  task_queue.py  therapist.py  web_api.js
core/db/: __init__.py  models.py  schema.sql
data/: prompt_repo.py
discord/: __init__.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  ASCII_DIAGRAMS.md  CODEX_PR_INTEGRATION.md  DEPLOYMENT.md  ECHO_LOG_VIEWER.md  ENVIRONMENT_SETUP.md  FAQ.md  HALLUCINATION_AUDIT.md  HANDSHAKE.md  INDEX.md  Legion Architecture and Diagrams.md  README.md  REFERENCE.md  STABILITY_AUDIT.md  TODO.md  _temp_merge_log.md  architecture.md  architecture_blueprint.md  cli_usage.md  database.md  deploy.md  development.md  discord_integration.md  dispatch_flow_ascii.md  finalization_report.md  function_flow_ascii.md  function_index.md  index.md  layerLogic  lmstudio_proxy.md  mcp_cursor_integration.md  mcp_quickstart.md  middleware.md  middleware_interaction_logic.md  middleware_requirements.md  monitoring.md  openapi.json  orchestrator.md  port_configuration.md  (+7 more)
docs/legacy/: agents  (+2 more)
dotenv/: __init__.py
email_validator/: __init__.py
httpx/: __init__.py
infra/: discord_channels.yaml
interface/: alembic.ini  app.py  dependencies.py  main.py  orchestrator_comm.py  requirements.txt  routes_admin.py  websocket_manager.py
jose/: __init__.py
legacy/: ports.yaml
legion/: __init__.py  agent_registry.py  cli.py  default_ports.py  orchestrator.py  ports.py  registration.py  state_repo.py  task_queue.py
memory/: legion_memory.py
metrics/: __init__.py  app.py  exporter.py
middleware/: Dockerfile  docker-compose.yml  requirements.txt
multipart/: __init__.py
numpy/: __init__.py
openai/: __init__.py
passlib/: __init__.py
prometheus_client/: __init__.py
pydantic_settings/: __init__.py
pytest/: __init__.py
reports/: core_unit_checks.txt  node_audit_250517.json  secret_scan.txt
research/: best_practices_2025Q2.md  metrics_tech_brief.md
schemas/: directive.schema.json
scripts/: activate_once.sh  agent_instantiation_guard.py  alembic.ini  apply_codemod_batch.py  check_direct_agent_instantiation.py  ci_check.sh  ci_watch_and_merge.sh  ci_watch_merge.sh  ci_watch_merge_continuous.sh  cli.py  coverage_baseline.py  cursor_legion_operator.py  cursor_sync_guard_docs.sh  deploy.sh  dev_setup.sh  dev_start.sh  doc_ports.py  docs_build_check.sh  docs_check.sh  docs_file_type_filter.py  doctor.py  export_openapi.py  fetch_failed_ci_logs.sh  forbidden_docs_check.py  gen_api_doc.py  gen_env_ports.py  gen_ports_env.sh  generate_agent_docs.py  get_ci_port.py  import_rewrite_planner.py  init_memory.py  init_memory.sh  integration_smoke.py  kick_workflows_demo.sh  launch_ui.sh  legion_codemod_context.py  link_check.py  lint_docs.py  lint_env.sh  mcp_server_wrapper.py  (+45 more)
skills/: README_MCP.md  __init__.py  llm_client.py  mcp_client_example.py  mcp_config.yaml  mcp_server.py  search.py  summarize.py  test_mcp_quick.py
sqlalchemy/: __init__.py  orm.py  sql.py
src/: discord_integration.py  indexing.py  legion_memory.py  legion_tools.py  orchestrator.py  ux_feed.py
tests/: __init__.py  compat_stubs.py  conftest.py  legacy_skip.py  test_agent_capabilities.py  test_architect_agent.py  test_discord_message_sending.py  test_http_client.py  test_interface.py  test_llm_connector.py  test_mcp_server.py  test_orchestrator.py  test_orchestrator_lock.py  test_orchestrator_ports.py  test_ports.py  test_prompts.py  test_rate_limit.py  test_redis_migration.py  test_routing_map.py  test_security_integration.py  test_state_repo_agents.py  test_state_repository.py  test_tag_middleware.py  test_task_registry_api.py  ui_smoke.spec.ts  utils.py
tests_legacy/: test_agent_capabilities.py  test_architect_agent.py  test_discord_message_sending.py  test_http_client.py  test_interface.py  test_llm_connector.py  test_orchestrator.py  test_orchestrator_load_agent.py  test_orchestrator_ports.py  test_routing_map.py  test_state_repo_agents.py  test_state_repository.py  test_tag_middleware.py  test_task_registry_api.py  test_websockets.py
tools/: __init__.py  assurance_scan.py  auto_fix.py  auto_resolve_conflicts.py  doc_audit_findings.json  easy_wins_queue.py  post_update.py  sequential_pr_merge.py  type_debt.py
ui/: app.py
ux/: placeholder.txt
yaml/: __init__.py
zmq/: __init__.py
(+448 files in other folders)
