[tool.ruff]
# https://docs.astral.sh/ruff/settings/
target-version = "py38" # Match lowest supported Python version
line-length = 88

[tool.ruff.lint]
# Define rules based on project_config.md and common standards
# See: https://docs.astral.sh/ruff/rules/
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # mccabe complexity
    "B",  # flake8-bugbear
    "A",  # flake8-builtins
    "UP", # pyupgrade
    "N",  # pep8-naming
    "T20",# flake8-print
    "SIM",# flake8-simplify
    "PTH",# flake8-use-pathlib
    "RUF",# Ruff-specific rules
]
ignore = [
    "E501", # Line too long, handled by formatter
    "B008", # Function call argument default mutation (can be project specific)
    "C901", # McCabe complexity (adjust limit if needed)
    "T201", # allow print statements in scripts
    "S101", # allow assert statements in tests
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"interface/schemas/agent.py" = ["N801"]  # Allow legacy class naming in agent schemas

[tool.ruff.lint.isort]
known-first-party = ["legion", "interface", "core", "skills", "memory", "integration"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Exclude common directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".*", # Ignore hidden directories/files
    "*.pyi",
    "*.js",
    "*.css",
    "*.html",
    "*.jsonl",
    "*.db",
    "migrations/versions/*", # Alembic migration files
    "tests",
    "scripts",
]

[tool.mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html
mypy_path = "core:legion"
python_version = "3.8"
explicit_package_bases = true
namespace_packages = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

# Strictness flags (enable gradually if needed)
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

# Ignore missing imports for libraries that might not have stubs
ignore_missing_imports = true

# Per-module settings if needed
# [[tool.mypy.overrides]]
# module = [
#     "some_library.*",
# ]
# ignore_missing_imports = true

# Exclude directories for type checking
exclude = ['venv', '.venv', 'build', 'dist', 'docs', 'scripts', '.git', '.ruff_cache', '.pytest_cache', 'artifacts', 'legion/core/db.py']

packages = ["legion"]

[tool.pytest.ini_options]
# https://docs.pytest.org/en/stable/reference/reference.html#ini-options-ref
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
    # Add "interface/tests" if creating separate tests later
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

# Configure asyncio mode
# requires pytest-asyncio installed
asyncio_mode = "auto"

# Optional: Coverage configuration (requires pytest-cov)
# [tool.coverage.run]
# source = ["legion", "interface", "core", "skills", "memory", "integration"]
# branch = true
# omit = ["tests/*", "*__main__*", "venv/*", ".venv/*"]
#
# [tool.coverage.report]
# fail_under = 85 # Enforce coverage threshold
# show_missing = true
# skip_covered = true


[tool.bandit]
# https://bandit.readthedocs.io/en/latest/config.html
skips = ["B101"] # assert_used - common in tests
# exclude_dirs = ["tests", ".venv", "venv"]

[project.scripts]
legion = "legion.cli:main"
